# CreatureBattleSimulator

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: db.rs  main.rs  responses.rs  routes.rs
src/api/: lobbies.rs  mod.rs  responses.rs  routes.rs
src/db/: entities.rs  mod.rs
