[package]
name = "CreatureBattleSimulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = "2.0.4"
testcontainers-modules = { version = "0.11.4", features = ["surrealdb"]}
log4rs = { version = "1.3.0", features = ["default", "rolling_file_appender"] }
log = "0.4.22"
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "serde"] }